# masa

./: README.md  package.json
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MultiAccountSearch.tsx  styles.ts
src/hooks/: useAutoScroll.ts
