[package]
name = "masa"
version = "0.1.0"
description = "Multi Account Search Apps - Uma ferramenta para buscar apps em múltiplas accounts VTEX"
authors = ["Gabriel Silva <bieuss303@gmail.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "shell-execute",
  "path-all",
  "window-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

